# rust-lessons

./: .aiignore  .gitignore  AGENTS.md  Cargo.toml  README.md
.codex/: README.md
.codex/skills/: README.md
Lessons/Lesson_01_HelloWorld/: Cargo.toml
Lessons/Lesson_01_HelloWorld/src/: main.rs
Lessons/Lesson_02_PrimitiveTypes/: Cargo.toml
Lessons/Lesson_02_PrimitiveTypes/src/: main.rs
Lessons/Lesson_03_CustomTypes/: Cargo.toml
Lessons/Lesson_03_CustomTypes/src/: main.rs
Lessons/Lesson_04_Syntax/: Cargo.toml
Lessons/Lesson_04_Syntax/src/: main.rs
Lessons/Lesson_05_UnitTests/: Cargo.toml
Lessons/Lesson_05_UnitTests/src/: main.rs
Lessons/Lesson_06_Scoping/: Cargo.toml
Lessons/Lesson_06_Scoping/src/: main.rs
Lessons/Lesson_07_Generics/src/: main.rs
Lessons/Lesson_08_Traits/: Cargo.toml
Lessons/Lesson_08_Traits/src/: main.rs
Lessons/Lesson_09_AttributesAndMacros/: Cargo.toml
Lessons/Lesson_09_AttributesAndMacros/src/: main.rs
Lessons/Lesson_10_Patterns/: Cargo.toml
Lessons/Lesson_10_Patterns/src/: main.rs
Scripts/Common/: Install_Dependencies.ps1  Run_Lesson_01_HelloWorld.ps1  Run_Lesson_02_PrimitiveTypes.ps1  Run_Lesson_03_CustomTypes.ps1  Run_Lesson_04_Syntax.ps1  Run_Lesson_05_UnitTests.ps1  Run_Lesson_06_Scoping.ps1  Run_Lesson_07_Generics.ps1  Run_Lesson_08_Traits.ps1  Run_Lesson_09_AttributesAndMacros.ps1  Run_Lesson_10_Patterns.ps1
Scripts/Other/: RunTests.ps1
